Submit for Grading

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,7 +32,7 @@
     </nav>  <!-- close navbar class -->
     
   <section class="filler">
-      <h1>To be completed by the students</h1>
+      <h1>To be completed by the students.</h1>
       <h3>On their personal student portfolio.</h3>
   </section>
     
@@ -52,4 +52,5 @@
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
+
 
